[package]
name = "ploton_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.5.2"
flate2 = "1.0.28"
reqwest = { version = "0.11.25", features = ["json"] }
tokio = { version = "1.36.0", features = ["full"] }
walkdir = "2.5.0"
