[package]
name = "ploton_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
clap = "4.5.2"
dirs = "5.0.1"
flate2 = "1.0.28"
keyring = "2.3.2"
reqwest = { version = "0.11.25", features = ["json"] }
serde = { version = "1.0.197", features = ["serde_derive"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["full"] }
walkdir = "2.5.0"
