[package]
name = "ploton_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
clap = { "version" = "4.5.2", features = ["derive", "suggestions"] }
dirs = "5.0.1"
flate2 = "1.0.28"
indicatif = "0.17.8"
inquire = "0.7.1"
is-terminal = "0.4.12"
paste = "1.0.14"
reqwest = { version = "0.11.25", features = ["json"] }
serde = { version = "1.0.197", features = ["serde_derive"] }
serde_json = "1.0.114"
serde_yaml = "0.9.34"
tokio = { version = "1.36.0", features = ["full"] }
walkdir = "2.5.0"
